fix: update res of cate
