# src/api/v1/models/repo/idea.repo.js
@@ -1,11 +1,15 @@
 'use strict'
 const { QueryTypes, Op, where } = require('sequelize')
 const { Idea, Comment, User, Category, sequelize } = require('../index')
-const { createVote, deleteVote, findVote } = require('./vote.repo')
+const { upVote, createVote, deleteVote, findVote } = require('./vote.repo')
 const { processReturnedData } = require('../../utils')
 
 // DEFIND OPTIONS
 const optIdea = {
+    order: [
+        ['createdAt', 'DESC'],
+        ['id', 'DESC']
+    ],
     include: [{
         model: Comment,
         as: 'comments',
@@ -27,15 +31,35 @@ const optIdea = {
     attributes: ['id', 'title', 'content', 'voteCount', 'commentCount', 'createdAt', 'updatedAt']
 }
 
+const optIdeaNoComment = {
+    order: [
+        ['createdAt', 'DESC'],
+        ['id', 'DESC']
+    ],
+    include: [
+        {
+            model: User,
+            attributes: ['id', 'username', 'email']
+        },
+        {
+            model: Category,
+            attributes: ['title', 'icon']
+        }
+    ],
+    attributes: {
+        exclude: ['isPublished', 'categoryId', 'userId']
+    }
+}
 
 const createIdea = async ({
-    title, content, categoryId, userId
+    title, content, categoryId, userId, isPublished
 }) => {
     const idea = await Idea.create({
         title,
         content,
         userId,
-        categoryId
+        categoryId,
+        isPublished
     })
 
     return idea
@@ -43,8 +67,14 @@ const createIdea = async ({
 
 // FIND
 const findIdea = async ({ id }) => {    
-    const idea = await Idea.findByPk(id, optIdea)
-    return processReturnedData(idea)
+    const idea = await Idea.findOne({
+        where: {
+            id,
+            isPublished: true
+        },
+        ...optIdea
+    })
+    return idea && processReturnedData(idea)
 }
 
 const findAllIdeas = async () => {
@@ -63,32 +93,22 @@ const findAllIdeasByUsedId = async ({userId, isPublished = true}) => {
     return processReturnedData(ideas)
 }
 
-const findIdeaPage = async ({ limit, page }) => {
+const findIdeaPage = async ({ limit, page, q = null }) => {
     const offset = (page - 1) * limit
+    const search = q ? {
+        title: {
+            [Op.like]: `%${q}%`
+        }
+    } : null
 
     const { count, rows: ideas } = await Idea.findAndCountAll({
         offset,
         limit,
-        order: [
-            ['createdAt', 'DESC'],
-            ['id', 'DESC']
-        ],
-        include: [
-            {
-                model: User,
-                attributes: ['username']
-            },
-            {
-                model: Category,
-                attributes: ['title', 'icon']
-            }
-        ],
         where: {
-            isPublished: true
+            isPublished: true,
+            ...search
         },
-        attributes: {
-            exclude: ['isPublished']
-        }
+        ...optIdeaNoComment
     })
 
     return {
@@ -97,26 +117,36 @@ const findIdeaPage = async ({ limit, page }) => {
     }
 }
 
-
 const increaseVoteCount = async ({
     ideaId, userId
 }) => {
     const idea = await Idea.findByPk(ideaId)
-    await sequelize.transaction(async () => {
-        const { vote, isCreated } = await createVote({
-            userId, ideaId
-        })
-        if(isCreated) {
-            await idea.increment('voteCount', {
-                by: 1
-            })
-        }
-    })
+    const t = await sequelize.transaction()
+
+    // const isUpdatedVote
+    // const vote = await User.(
+    //     {
+    //       firstName: 'Bart',
+    //       lastName: 'Simpson',
+    //     },
+    //     { transaction: t },
+    //   );
+    // await t.commit()
+    return 1
+    // await sequelize.transaction(async () => {
+    //     const { vote, isCreated } = await createVote({
+    //         userId, ideaId
+    //     })
+    //     if(isCreated) {
+    //         await idea.increment('voteCount', {
+    //             by: 1
+    //         })
+    //     }
+    // })
     return {
         voteCount: idea.voteCount
     }
 }
-
 
 const decrementVoteCount = async ({ userId, ideaId }) => {
     const [idea, vote] = await Promise.all([
@@ -142,31 +172,14 @@ const decrementVoteCount = async ({ userId, ideaId }) => {
     }
 }
 
-const searchIdea = async ({q, page = 1, limit = 5}) => {    
-    const offset = (page - 1) * limit;
+const updateIdea = async ({ id, opt}) => {
+    const idea = await Idea.findByPk(id)
 
-    const { count, rows } = await Idea.findAndCountAll({
-        offset,
-        limit,
-        order: [
-            ['createdAt', 'DESC'],
-            ['id', 'DESC']
-        ],
-        where: {
-            title: {
-                [Op.like]: `%${q}%`
-            }
-        }
-    })
+    await idea.update(opt)
+    await idea.save()
 
-    const totalPages = Math.ceil(count / limit);
-    return {
-        ideas: processReturnedData(rows),
-        totalPages
-    };
+    return processReturnedData(idea)
 }
-
-
 
 module.exports = {
     createIdea,
@@ -176,5 +189,5 @@ module.exports = {
     findIdea,
     increaseVoteCount,
     decrementVoteCount,
-    searchIdea
+    updateIdea
 }
